<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AutoMagic Wallpapers Free</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="descr_image">Image</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="download_wallpaper">Download</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_category_photography">Photography Category</string>
    <string name="menu_item_category_art">Art Category</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>
    <string name="menu_item_start_magic">Start Magic</string>
    <string name="menu_item_stop_magic">Stop Magic</string>
    <string name="button_image_list">Categories</string>
    <string name="download_path">/mnt/sdcard/ProjectZero</string>
    <string name="pete">charlie</string>
    <string name="title_activity_wiki_info">WikiInfo</string>
    <string name="title_about">About AutoMagic Wallpapers</string>
    <string name="title_contactUs">Contact Us</string>
    <string name="title_activity_folder_picker">FolderPicker</string>
    <string name="title_activity_ad_pop_up">AdPopUp</string>
    <string name="pref_wallpaper_frequency">Wallpaper Change Frequency</string>
    <string name="pref_wallpaper_frequency_Default">300</string>
    <string name="pref_rotating_Images_Sort">Sort Rotating Images By</string>
    <string name="pref_rotating_Images_Sort_Default">nosort</string>
    <string name="no_data_connection">No Data Connection</string>
    <string name="set_category">Category</string>
    <string name="start_magic">Start Magic</string>
    <string name="btn_settings">Settings</string>

</resources>