<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
    android:id="@+id/item_photography"
    android:title="@string/menu_item_category_photography"
    android:showAsAction="always"
    android:icon="@drawable/content_picture"/>
    <item
    android:id="@+id/item_art"
    android:title="@string/menu_item_category_art"
    android:showAsAction="always"
    android:icon="@drawable/ic_paintbrush"/>    
    <item
    android:id="@+id/item_start_magic"
    android:title="@string/menu_item_start_magic"
    android:showAsAction="always"
    android:icon="@drawable/av_play"/>
    <item
    android:id="@+id/item_end_magic"
    android:title="@string/menu_item_stop_magic"
    android:showAsAction="always"
    android:icon="@drawable/av_stop"/>
    <item
        android:id="@+id/action_settings"
        android:showAsAction="always"
        android:title="@string/action_settings"
    	android:icon="@drawable/action_settings"/>
    <item
        android:id="@+id/item_clear_memory_cache"
        android:title="@string/menu_item_clear_memory_cache"
        android:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/item_clear_disc_cache"
        android:title="@string/menu_item_clear_disc_cache"
        android:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/item_pause_on_scroll"
        android:checkable="true"
        android:title="@string/menu_item_pause_on_scroll"
        android:visible="false"/>
    <item
        android:id="@+id/item_pause_on_fling"
        android:checkable="true"
        android:title="@string/menu_item_pause_on_fling"
        android:visible="false"/>
</menu>